--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=3.4.3 <4.0.0'
 
 dependencies:
+  dio: ^5.6.0
   email_validator: ^3.0.0
   fluro: ^2.0.5
   flutter:
@@ -25,4 +26,3 @@ flutter:
 
   assets:
     - assets/
-    
